# susu-monorepo

./: .env.example  .eslintrc.js  .gitattributes  .gitignore  .markdown-link-check.json  Anchor.toml  CODEOWNERS  CONTRIBUTING-TRANSLATIONS.md  CONTRIBUTING.md  Cargo.toml  IDL_FREEZE.md  LICENSE  README.md  _bmad-output  codama.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rust-toolchain.toml  tsconfig.base.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
_bmad/: config.yaml  module-help.csv
audits/: README.md  SKIP_AUDIT_GATE  audit-sow-summary.md  devnet-dryrun-2026-05-09.json
crates/: README.md
crates/susu-adversary/: Cargo.toml  README.md  build.rs
crates/susu-adversary/src/: lib.rs  main.rs  report.rs  simulator.rs
crates/susu-adversary/src/scenarios/: mod.rs  thirty_percent_cartel.rs
crates/susu-adversary/tests/: cli_smoke.rs  deterministic_report.rs  thirty_percent_cartel.rs
docs/: README.md  architecture-notes.md  codama-rust-status.md  collateral-curve.md  demo-setup.md  epic9-mainnet-gate.md  fincen-cvc-framing.md  integration-privy.md  integration-squads.md  integration-token-extensions.md  legal-engagement.md  legal-sow-summary.md  rotation-assignment.md  sdk-typescript.md  surfpool-status.md  threat-model.md  troubleshooting.md
examples/: README.md
log/: 2026-05-06.md  2026-05-07.md  (+3 more)
programs/susu/: Cargo.toml
programs/susu/idl/: susu.json
programs/susu/src/: constants.rs  curve.rs  error.rs  lib.rs  rotation.rs  seeds.rs
programs/susu/src/instructions/: accept_invite.rs  cancel_group.rs  claim_payout.rs  complete_group.rs  contribute.rs  create_group.rs  invite_members.rs  mod.rs  post_collateral.rs  slash_member.rs  start_contributions.rs  top_up_collateral.rs  withdraw_collateral.rs
programs/susu/src/state/: group.rs  member_position.rs  mod.rs  rotation_receipt.rs
programs/susu/tests/: accept.rs  cancel.rs  claim_payout.rs  contribute.rs  curve.rs  full_lifecycle.rs  happy_path.rs  invite.rs  no_strategic_default.rs  rotation_assignment.rs  start_contributions_rotation.rs  top_up_collateral.ts
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: accounts.rs  client.rs  errors.rs  instructions.rs  lib.rs  pdas.rs  queries.rs
sdk/rust/tests/: parity.rs
(+531 files in other folders)
