[workspace]
resolver = "2"
members = ["programs/susu", "sdk/rust", "crates/*"]

[workspace.dependencies]
anchor-lang = "~1.0.2"
anchor-spl = "~1.0.2"
thiserror = "2"
borsh = "1"
proptest = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
overflow-checks = true
