[package]
name = "susu"
version = "0.1.0"
edition = "2021"

[lib]
name = "susu"
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
