[package]
name = "susu-client"
version = "0.1.0-alpha.0"
edition = "2021"
publish = true
license = "MIT"
description = "Rust client SDK for Susu Protocol"
repository = "https://github.com/tantshirt/susu-monorepo"

[lib]
name = "susu_client"
path = "src/lib.rs"

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
borsh = { workspace = true }
solana-sdk = "4"
solana-client = "3"
solana-commitment-config = "3.1"
solana-compute-budget-interface = "3"
solana-signer = "3"
solana-transaction = { version = "3.1", features = ["bincode"] }
susu = { path = "../../programs/susu", features = ["no-entrypoint"] }
thiserror = { workspace = true }
